Modif Portfolio ajout photo

--- a/style.css
+++ b/style.css
@@ -218,6 +218,9 @@ header h2 {
 #p3 {
   margin-left: 8vw;
 }
+#p4 {
+  margin: 0 auto;
+}
 .project img {
   transition: 0.4s ease-in-out;
   width: 100%;
